<resources>
    <string name="app_name">EtxebalMovil</string>
    <string name="telefono">Telefono:</string>
    <string name="email">Email:</string>
    <string name="direccion">Dirección:</string>
    <string name="web">Web:</string>
    <string name="provincia">Provincia:</string>
    <string name="municipio">Municipio:</string>
    <string name="cp">CP:</string>
    <string name="nombre">Nombre:</string>
    <string name="tipo">Tipo:</string>
    <string name="gastronomico">Gastronómico</string>
    <string name="restaurante">Restaurante</string>
    <string name="club">Club</string>
    <string name="tienda">Tienda</string>
    <string name="autocaravana">Autocaravana</string>
    <string name="surf">Surf</string>
    <string name="reservar">Reservar</string>
    <string name="descripcionMapa">Boton que lleva al mapa y muestra la posicion o posiciones de su invocador</string>
    <string name="descripcionReservar">Botton que lleva a la pantalla que realiza la reserva</string>
    <string name="descripcionImagenAlojamiento">Imgaen que cambia segun el tipo de alojamiento que es</string>
    <string name="surfing">Surfing</string>
    <string name="descripcionBuscar">Al hacer click busca los alojamientos que cumplan con los filtros o si no estas en ella te manda a la pantalla de buscar</string>
    <string name="desde">Desde:</string>
    <string name="hasta">Hasta:</string>
    <string name="cantidadPersonas">Cantidad de Personas:</string>
    <string name="cancelar">Cancelar</string>
    <string name="descripcionCalendario">Boton que al hacer click te lleva al calendario</string>
    <string name="password">Contraseña</string>
    <string name="descripcionLogo">Logo de la Empresa</string>
    <string name="descripcionMasOpciones">Te lleva a la pantalla de filtros rapidos, reservas e información</string>
    <string name="descripcionInicioSesion">Boton que te lleva a iniciar Sesion si no estas logueado o te saca si lo estas</string>
    <string name="descripcionCasa">Te lleva a la pantalla Inicial</string>
    <string name="misReservas">Mis Reservas</string>
    <string name="albergues">Albergues</string>
    <string name="campings">Campings</string>
    <string name="agroturismos">Agroturismos</string>
    <string name="casasRurales">Casas Rurales</string>
    <string name="aboutUs">About Us</string>
    <string name="botonPrimero">Primero</string>
    <string name="botonUltimo">Último</string>
    <string name="buscar">Buscar</string>
    <string name="misSitios">Mis Sitios</string>
    <string name="cercaDeMi">Cerca de Mí</string>
    <string name="inicioSesion">Inicio Sesión</string>
    <string name="vacio">Por favor rellene el campo</string>
    <string name="alguno_vacio">Alguno de los campos no cumple los requisitos</string>
    <string name="formato">Formato Incorrecto</string>
    <!-- Toast Login -->
    <string name="errorOtro">Algo fallo al iniciar sesion</string>
    <string name="errorUsuario">Alguno de los campos no es correcto</string>
    <string name="Alojamientos">Alojamientos</string>
    <string name="guardar">Guardar</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_global">Map</string>
    <string name="title_activity_maps_view_all">Map</string>
    <string name="date_picker_title">Fecha de reserva:</string>

    <!-- Dialog date picker -->
    <string name="dialog_start_date">Fecha de entrada:</string>
    <string name="dialog_end_date">Fecha de salida:</string>
</resources>
