<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewLblMisReservas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/misReservas"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewLblAlbergues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/albergues"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center">

            <TextView
                android:id="@+id/textViewLblCamping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/campings"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewLblAgroturismos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agroturismos"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center">

            <TextView
                android:id="@+id/textViewLblCasasRurales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/casasRurales"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center">

            <TextView
                android:id="@+id/textViewAboutUs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutUs"
                android:textSize="30sp" />
        </TableRow>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>